Implemented OSGI Service , Use it in sling model and servlet

--- a/aem-guides-demo/ui.apps/src/main/content/jcr_root/apps/demo/components/helloworld/helloworld.html
+++ b/aem-guides-demo/ui.apps/src/main/content/jcr_root/apps/demo/components/helloworld/helloworld.html
@@ -23,4 +23,6 @@
         <p class="cmp-helloworld__item-label">Model message:</p>
         <pre class="cmp-helloworld__item-output"data-cmp-hook-helloworld="model">${model.message}</pre>
     </div>
+
+	<a href="${currentPage.path}/jcr:content/root/container/container/login.login.json"  > show more </a>
 </div>
